Fixed more spacing on partners page lol

--- a/website/css/sass/app.scss
+++ b/website/css/sass/app.scss
@@ -1017,7 +1017,7 @@ h1 {
 
 #partnersInfo
 {
-  margin-top: 30px;
+  margin-top: 0px;
   margin-bottom: 30px;
 
 p
